Fix select text being covered up a bit

--- a/public/css/dark.scss
+++ b/public/css/dark.scss
@@ -239,7 +239,6 @@ table.table thead .sorting::after {
 	color: $black !important;
 }
 .dark-select__input {
-	background-color: $white !important;
 	color: $black !important;
 }
 
